<resources>
    <string name="app_name">Algartech</string>
    <string name="home">Home</string>
    <string name="profile">Perfil</string>
    <string name="rightAddress">La mejor aplicación para visualizar las ciudades en cualquier día.</string>
    <string name="qulity">¡Ahora es muy fácil alcanzar la mejor calidad de visualización de ciudades en la palma de tu mano!</string>
    <string name="register">Registrar</string>
    <string name="login">Login</string>
    <string name="start">Comencemos</string>
    <string name="goLogin">¡Vamos a ingresar!</string>
    <string name="goNotAcount">¿No tienes una cuenta? Registro</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="goRegister">¡Vamos a registrarnos!</string>
    <string name="haveAcount">¿Ya tienes una cuenta? ingresar</string>
    <string name="name">Digite su nombre completo</string>
    <string name="number_version">version 1.0</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="regional">Regional</string>
    <string name="state">Gestionar ciudad</string>
    <string name="search_cities">Buscar ciudades</string>
    <string name="add">Agregar la ciudad</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Salir</string>
    <string name="address">Digite su dirección</string>
    <string name="document">Digite el numero de documento</string>
    <string name="search_city">Buscar ciudades</string>
    <string name="temp">Tempradtura</string>
    <string name="descript">Descripción</string>
    <string name="fast">Velocidad</string>
    <string name="humidity">Humedad</string>
    <string name="temperature_format">Grados: %d °</string>
    <string name="weather_description_format">Estado: %s</string>
    <string name="wind_speed_format">Velocidad del viento: %.2f</string>
    <string name="humidity_format">Humedad: %d%%</string>
    <string name="enter_valid_city">Ingresa una ciudad válida</string>
    <string name="no_internet_connection">No tienes conexión a Internet</string>
    <string name="go_to_saved_maps">Por favor diríjase a los mapas guardados</string>
    <string name="error_service_consumption">Error al consumir el servicio</string>
    <string name="clima_online">Clima en linea</string>
    <string name="cities_add">Buscar ciudad guardada</string>
    <string name="name_city">Nombre de la ciudad</string>
    <string name="add_cities">Ciudades guardadas</string>
    <string name="search_add_cities">Buscar ciudades guardadas</string>
    <string name="empty_cities">No hay ciudades guardadas</string>
    <string name="map_city">Mapa de la ciudad</string>
</resources>